new proj/src/objects/GE_OG_TM_Mkt_Project__c.object
<CustomObject>
    <fields>
        <fullName>Country_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>GE_HQ_Country__c</referenceTo>
        <relationshipLabel>Mkt Projects</relationshipLabel>
        <relationshipName>Mkt_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_BASIN__c</fullName>
        <label>BASIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_BLOCK__c</fullName>
        <label>BLOCK</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CAPACITY_GAS_MMCF_D__c</fullName>
        <label>CAPACITY GAS MMCF/D</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CAPACITY_OIL_MB_D__c</fullName>
        <label>CAPACITY OIL MB/D</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CONDENSATE_PEAK_MB_D__c</fullName>
        <label>Exploration/Appraisal Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CONDENSATE_RESERVES_RECOVER_MMB__c</fullName>
        <label>CONDENSATE RESERVES RECOVERABLE MMB</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CONSTRUCTION__c</fullName>
        <label>CONSTRUCTION</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Capacity_Bcm__c</fullName>
        <label>Reservoir Depth (Ft.)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Capacity__c</fullName>
        <label>Capacity</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Capacity_mtpa__c</fullName>
        <label>Project CapEx - Total (PFC Estimate $MM)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Compressor_station__c</fullName>
        <label>Compressor station</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Current_Status__c</fullName>
        <label>Component Cost</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Customer__c</fullName>
        <label>Shareholder Partner 2</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Destination_Location__c</fullName>
        <label>Destination Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Diam_inches__c</fullName>
        <label>Diam (inches)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_EPCCONTRACTOR__c</fullName>
        <label>EPC Contractor</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_EPC_Company__c</fullName>
        <label>Shareholder Partner 2  - % Owned</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_EPC__c</fullName>
        <label>Shareholder Partner 1  - % Owned</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_ESTIMATED_ORDER_YEAR__c</fullName>
        <label>FEED Year (PFC Estimate)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_FEED_Company__c</fullName>
        <label>FEED Company</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_FIELD__c</fullName>
        <label>FIELD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_GAS_RESERVES_RECOVERABLE_BCF__c</fullName>
        <label>GAS RESERVES RECOVERABLE BCF</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_GE_O_G_region__c</fullName>
        <label>GE O&amp;G region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_GREEN_BROWN__c</fullName>
        <label>GREEN-BROWN</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_ID__c</fullName>
        <label>ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_INJNOWELLS__c</fullName>
        <label>INJNOWELLS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_In_2010_GPB__c</fullName>
        <label>Included in SrS</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Length__c</fullName>
        <label>Length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Licensor__c</fullName>
        <label>Licensor</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Location__c</fullName>
        <label>Location</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_OGID__c</fullName>
        <label>O&amp;G ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_OIL_RESERVES_RECOVERABLE_MMB__c</fullName>
        <label>OIL RESERVES RECOVERABLE MMB</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_OPERATOR__c</fullName>
        <label>Shareholder Partner 1</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Operator_Main_Shareholder__c</fullName>
        <label>Operator / Main Shareholder</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Order_YR__c</fullName>
        <label>EPC Year (PFC Estimate)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_PFC_ESTIMATED_START_UP_YEAR__c</fullName>
        <label>FID Year (PFC Estimate)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_PLAY_TYPE__c</fullName>
        <label>PLAY TYPE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_PRODNOWELLS__c</fullName>
        <label>PRODNOWELLS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_PRODUCTION_FACILITY_TYPE__c</fullName>
        <label>PRODUCTION FACILITY TYPE</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_PRODUCTION_TYPE__c</fullName>
        <label>PRODUCTION TYPE</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_PROJECT_STATUS__c</fullName>
        <label>PROJECT STATUS</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Phase__c</fullName>
        <label>Phase#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Plant_type__c</fullName>
        <label>Plant type</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Probability_of_Project_Gng_Fwd__c</fullName>
        <label>Probability of Project Going Forward</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Product__c</fullName>
        <label>Product</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Start_Up_YR__c</fullName>
        <label>Start Up Year (Announced)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Start_up_Yr_PFC_Energy_Estimate__c</fullName>
        <label>Start Up Year (PFC Estimate)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Sub_segment__c</fullName>
        <label>Sub-segment</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_TOTAL_NO_WELLS__c</fullName>
        <label>TOTAL.NO.WELLS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Top_Project__c</fullName>
        <label>Top Project</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Trains__c</fullName>
        <label>Trains #</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Type__c</fullName>
        <label>Operator Type</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Unit__c</fullName>
        <label>Topside/Process Cost</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_WATER_DEPTH_FT__c</fullName>
        <label>WATER.DEPTH.FT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Mkt Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Industry Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mkt Projects</pluralLabel>
    <recordTypes>
        <fullName>GE_OG_TM_LNG</fullName>
        <active>true</active>
        <label>LNG</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_TM_Pipeline</fullName>
        <active>true</active>
        <label>Pipeline</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_OG_TM_Upstream</fullName>
        <active>true</active>
        <label>Upstream</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ge_OG_TM_Downstream</fullName>
        <active>true</active>
        <label>Downstream</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>